Tue Oct 09 00:00:53 BST 2007  Olly Betts <olly@survex.com>

	* php/: Fix wrapping of NumberValueRangeProcessor for PHP4 - SWIG
	  sees the Xapian::v102 namespace, but doesn't understand the
	  "using" directive.  Also split the regression test for bug#193
	  into separate versions for PHP4 and PHP5 as the previous version
	  only worked for PHP5.

Mon Oct 01 00:38:21 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* csharp/SmokeTest.cs,php/smoketest.php,php/smoketest4.php,
	  php/smoketest5.php,python/smoketest.py,ruby/smoketest.rb,
	  tcl8/smoketest.tcl: Add tests for OP_MULT_WEIGHT and
	  corresponding constructor to smoketests.
	* NEWS: Updated

Sun Sep 30 23:38:45 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xapian.i: Add OP_MULT_WEIGHT, and the new constructor needed to
	  use it.
	* python/pythontest.py: Add simple test of OP_MULT_WEIGHT feature,
	  and a more involved test which uses the value of
	  MSet.get_max_possible() from an initial query to get the factor
	  necessary to normalise the weights from a subquery, and then uses
	  this factor in a second query with OP_MULT_WEIGHT.
	* NEWS: Updated
 
Sun Sep 30 21:16:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* csharp/Makefile.am,python/extra.i,python/pythontest.py,
	  python/util.i,xapian.i: Re-apply changes which needed more
	  thought or more work before being included in a release.
	* NEWS: Update with current descriptions of these changes.

Sat Sep 29 01:29:14 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* ruby/smoketest.rb: Change name of test for metadata to avoid
	  collision with matchdecider test (and to be correctly
	  descriptive).

Fri Sep 28 18:33:09 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update for 1.0.3.

Fri Sep 28 18:06:58 BST 2007  Olly Betts <olly@survex.com>

	* INSTALL,configure.ac: Allow the user to specify TCL_LIB=... on the
	  configure command line to override autodetection.