@@ -1,3 +1,11 @@
+Tue Oct 09 22:01:57 BST 2007  Olly Betts <olly@survex.com>
+
+	* php/util.i: For PHP4, wrap Xapian::sortable_serialise() as
+	  xapian_sortable_serialise() and Xapian::sortable_unserialise() as
+	  xapian_sortable_unserialise().
+	* php/docs/bindings.html: Document how non-class functions are
+	  wrapped.
+
 Tue Oct 09 00:00:53 BST 2007  Olly Betts <olly@survex.com>
 
 	* php/: Fix wrapping of NumberValueRangeProcessor for PHP4 - SWIG
